--- a/stylesheet.css
+++ b/stylesheet.css
@@ -349,7 +349,7 @@ nav > ul > li > a {
 
 .contactsheet{
     width: 100%;
-    height: 100vh;
+    height: 1200px;
     background-image: linear-gradient(rgba(0,0,0,0.7), #10596A), url(Bilder/herohome.jpg) ;
     background-position: center;
     background-size: cover;
@@ -436,7 +436,9 @@ h2{
 @media (min-width: 576px){
     .contactsheet{
         width: 100%;
-        height: 100vh;
+        height: 100%;
+        padding-top: 50px;
+        margin-bottom: 50px;
         background-image: linear-gradient(rgba(0,0,0,0.7), #10596A), url(Bilder/herohome.jpg) ;
         background-position: center;
         background-size: cover;
@@ -450,7 +452,7 @@ h2{
         color: white;
         width: 400px;
         margin: 0px 200px;
-        height: 550px;
+        height: 90%;
         text-align: left;
         justify-content: center;
         font-size: 1.2em;
