--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1043,3 +1043,12 @@ hr{
     justify-content: center;
     align-items: center;
 }
+
+.sr-only{
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
