--- a/stylesheet.css
+++ b/stylesheet.css
@@ -590,8 +590,8 @@ footer form input{
 
 footer form button{
     background: transparent;
-    border: 2px solid #fff;
-    color: #fff;
+    border: 2px solid #10596A;
+    color: #10596A;
     padding: 10px 30px;
     font-size: 15px;
     width: 220px;
