--- a/stylesheet.css
+++ b/stylesheet.css
@@ -237,7 +237,7 @@ nav > ul > li > a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #10596A;
+    color: white;
     font-size: 1.2rem;
     white-space: nowrap;
     overflow: hidden;
