--- a/stylesheet.css
+++ b/stylesheet.css
@@ -982,6 +982,7 @@ hr{
     Jacket list
     ************/
 
+    
     .jacketlist-container{
         display: flex;
         justify-content: center;
@@ -998,7 +999,7 @@ hr{
         display: grid;
         grid-template-columns: repeat(3, 1fr); 
         grid-template-rows: repeat(4, auto);
-        gap: 100px;
+        gap: 50px;
     }
 
     .product-card {
@@ -1008,6 +1009,7 @@ hr{
         flex-direction: column;
         background-color: white;
         width: 100%;
+        height: 400px;
         padding: 5px;
         color: black;
         border-radius: 5px;
