--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1016,11 +1016,45 @@ hr{
         -webkit-box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
         -moz-box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
         box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
-        transition: transform 0.3s ease; /* Added transition property */
+        transition: transform 0.3s ease;
     }
     
     .product-card:hover {
         transform: scale(1.1); /* Changed from 'scale' to 'transform: scale' */
+    }
+
+    /*************
+    Jacket Specific
+    *************/
+
+    .jacket-detail{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        background-color: white;
+        width: 100%;
+        height: 60vh;
+        padding: 5px;
+        margin: 50px;
+        color: black;
+        border-radius: 5px;
+        -webkit-box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
+        -moz-box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
+        box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
+        transition: transform 0.3s ease;
+    }
+
+    .jacket-image{
+        width: 400px;
+
+    }
+
+    .jacket-info{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     /********
