--- a/stylesheet.css
+++ b/stylesheet.css
@@ -715,52 +715,6 @@ hr{
     background-color: transparent;
 }
 
-.checkout-box{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #D9D9D9;
-    width: 80%;
-    margin-left: 10%;
-    border-radius: 15px;
-    margin-bottom: 30px;
-    margin-top: 30px;
-}
-
-.checkout-box > a{
-    background-color: #10596A;
-    padding: 15px;
-    text-decoration: none;
-    color: white;
-    border-radius: 35px;
-    width: 100px;
-    height: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-}
-
-.checkout-box > a:hover{
-    background-color: white;
-    color: #10596A;
-}
-
-.cart-info > img{
-    width: 100px;
-}
-
-.checkout-box > div > hr{
-    height: 1px;
-    width: 100px;
-}
-
-.checkout-box > p{
-    margin: 5px;
-    padding: 0;
-}
-
 .cart-info{
     display: flex;
     flex-direction: row;
@@ -778,19 +732,6 @@ hr{
 .cart-info > div > p{
     padding: 0;
     margin: 0;
-}
-
-.checkout-box > div > h2,p{
-    display: flex;
-    flex-direction: column;
-}
-
-.checkout-box > hr{
-    margin: 0;
-}
-
-.checkout-box > div > p{
-    text-align: center;
 }
 
 .cart-form > p{
@@ -840,17 +781,20 @@ hr{
         flex-direction: row;
     }
 
-    .checkout-box{
+    #checkout-box{
         display: flex;
         flex-direction: column;
         justify-content: right;
-        align-items: center;
-        background-color: #D9D9D9;
-        width: 50%;
-        margin-left: 10%;
+        align-items: left;
+        background-color: #ffffff;
+        width: auto;
         border-radius: 15px;
-        margin-bottom: 30px;
+        margin: 50px;
+        padding: 50px;
         margin-top: 30px;
+        -webkit-box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
+        -moz-box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
+        box-shadow: 7px 7px 15px 0px rgba(0,0,0,0.39);
     }
 
     .cart-form > p{
@@ -989,6 +933,30 @@ hr{
         height: auto;
         padding: 10px;
         border-radius: 5px;
+    }
+
+    .jacket-card-link{
+        background-color: #10596A;
+        color: white;
+        width: auto;
+        height: auto;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    .cart-card{
+        display: flex;
+        flex-direction: row;
+        padding: 10px;
+    }
+
+    .cart-card > p{
+        padding: 15px;
+    }
+
+    .cart-image{
+        width: 100px;
+        height: auto;
     }
 
     .product-card {
