--- a/stylesheet.css
+++ b/stylesheet.css
@@ -936,10 +936,11 @@ hr{
     }
 
     .removeBtn{
-        background-color: #10596A;
+        background-color: #EF423B;
         width: auto;
-        height: auto;
-        padding: 10px;
+        height: 30px;
+        margin: 20px;
+        padding: 5px;
         border-radius: 5px;
     }
 
@@ -974,7 +975,7 @@ hr{
         flex-direction: column;
         background-color: white;
         width: 100%;
-        height: 400px;
+        height: 450px;
         padding: 5px;
         color: black;
         border-radius: 5px;
