--- a/stylesheet.css
+++ b/stylesheet.css
@@ -564,6 +564,13 @@ Jacket specific
     transition: transform 0.3s ease;
 }
 
+.loading{
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    margin-top: 100px;
+}
+
 .jacket-image{
     width: 200px;
 
